--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -21,6 +21,9 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="{{ url_for('entries') }}">Blogful</a>
+                    <a class="navbar-brand" href="{{ url_for('add_entry_get') }}">Add Entry</a>
+                    <a class="navbar-brand" href="{{ url_for('login_get') }}">Login</a>
+                    <a class="navbar-brand" href="{{ url_for('logout') }}">Logout</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
