--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -1,6 +1,7 @@
 {% macro render_entry(entry) %}
 <div class="row">
     <div class="col-md-2 text-right metadata">
+        {{ entry.author.name }}
         <ul class="list-unstyled">
             <li>
                 {{ entry.datetime | dateformat("%d/%m/%y") }}
@@ -9,7 +10,9 @@
                 <a href="{{ url_for('edit_entry_get', id=entry.id) }}">Edit</a>
             </li>
             <li>
-                <a href="{{ url_for('edit_entry_get', id=entry.id) }}">Delete</a>
+                <form action="{{ url_for('delete_entry_post', id=entry.id) }}" method="POST">
+                    <button type="submit" class="linkButton" onclick="return confirm('Are you sure that you want to delete this?');">Delete</button>
+                </form>
             </li>
         </ul>
     </div>
